Harden document storage reliability (#28)
Integrate the v0.4 storage, recovery, lifecycle, diagnostics, and deterministic provider-test work after Android CI #50 passed.